--- a/overrides/main.html
+++ b/overrides/main.html
@@ -6,18 +6,19 @@
   <!-- Giscus -->
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <script src="https://giscus.app/client.js"
-    data-repo="csmsapp/csmsapp.github.io"
-    data-repo-id="R_kgDOHE5UVA"
-    data-category="Announcements"
-    data-category-id="DIC_kwDOHE5UVM4COTZx"
-    data-mapping="pathname"
-    data-reactions-enabled="1"
-    data-emit-metadata="0"
-    data-input-position="bottom"
-    data-theme="light"
-    data-lang="zh-CN"
-    crossorigin="anonymous"
-    async>
+          data-repo="csmsapp/csmsapp.github.io"
+          data-repo-id="R_kgDOHE5UVA"
+          data-category="Announcements"
+          data-category-id="DIC_kwDOHE5UVM4COTZx"
+          data-mapping="pathname"
+          data-strict="1"
+          data-reactions-enabled="1"
+          data-emit-metadata="0"
+          data-input-position="top"
+          data-theme="light"
+          data-lang="zh-CN"
+          crossorigin="anonymous"
+          async>
   </script>
   <!-- Reload on palette change -->
   <script>
