--- a/overrides/main.html
+++ b/overrides/main.html
@@ -17,6 +17,7 @@
           data-input-position="top"
           data-theme="light"
           data-lang="zh-CN"
+          data-loading="lazy"
           crossorigin="anonymous"
           async>
   </script>
