--- a/overrides/main.html
+++ b/overrides/main.html
@@ -6,7 +6,7 @@
   <!-- Giscus -->
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <script src="https://giscus.app/client.js"
-          data-repo="csmsapp/csmsapp.github.io"
+          data-repo="opencsapp/opencsapp.github.io"
           data-repo-id="R_kgDOHE5UVA"
           data-category="Announcements"
           data-category-id="DIC_kwDOHE5UVM4COTZx"
