--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block announce %}
-  <h2>刚过415，23Fall已经基本落下帷幕了，希望同学们都拿到了理想的Offer，感谢大家一年的陪伴。这里诚挚邀请同学们<a href="contribute/">贡献内容</a>和<a href="datapoints/">提交DataPoints</a>，留下申请季宝贵的经验，帮助下一届学弟学妹</h2>
+  <h2>刚过415，23Fall已经基本落下帷幕了，希望同学们都拿到了理想的Offer，感谢大家一年的陪伴。<\h2>
+  <h2>这里诚挚邀请同学们<a href="contribute/">贡献内容</a>和<a href="datapoints/">提交DataPoints</a>，留下申请季宝贵的经验，帮助下一届学弟学妹</h2>
+  <h2></h2>
 {% endblock %}
 
 
